; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_zmalloc_list_decoder.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_zmalloc_list_decoder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_decoder = type { i32, i32 }

@HUFFMAN_MAX_CODE_LENGTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.list_decoder* @zmalloc_list_decoder(i32 %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.list_decoder*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %11, align 4
  store i32 8, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %5
  store i32 133, i32* %9, align 4
  br label %18

18:                                               ; preds = %17, %5
  %19 = load i32, i32* %9, align 4
  switch i32 %19, label %54 [
    i32 132, label %20
    i32 133, label %20
    i32 131, label %21
    i32 130, label %32
    i32 129, label %34
    i32 128, label %53
  ]

20:                                               ; preds = %18, %18
  br label %54

21:                                               ; preds = %18
  %22 = load i32, i32* %7, align 4
  %23 = add nsw i32 %22, 1
  %24 = call i32 @bsr(i32 %23)
  %25 = add nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = mul i64 4, %26
  %28 = load i32, i32* %12, align 4
  %29 = sext i32 %28 to i64
  %30 = add i64 %29, %27
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %12, align 4
  br label %54

32:                                               ; preds = %18
  %33 = call i32 @assert(i32 0)
  br label %54

34:                                               ; preds = %18
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @get_max_possible_gap(i32 %35, i32 %36)
  %38 = call i32 @llrun_get_buckets_quantity(i32 %37)
  store i32 %38, i32* %11, align 4
  %39 = load i32, i32* @HUFFMAN_MAX_CODE_LENGTH, align 4
  %40 = add nsw i32 %39, 1
  %41 = load i32, i32* %11, align 4
  %42 = add nsw i32 %41, 1
  %43 = load i32, i32* @HUFFMAN_MAX_CODE_LENGTH, align 4
  %44 = add nsw i32 %43, 1
  %45 = mul nsw i32 %42, %44
  %46 = add nsw i32 %40, %45
  %47 = sext i32 %46 to i64
  %48 = mul i64 %47, 4
  %49 = load i32, i32* %12, align 4
  %50 = sext i32 %49 to i64
  %51 = add i64 %50, %48
  %52 = trunc i64 %51 to i32
  store i32 %52, i32* %12, align 4
  br label %54

53:                                               ; preds = %18
  br label %54

54:                                               ; preds = %18, %53, %34, %32, %21, %20
  %55 = load i32, i32* %12, align 4
  %56 = call %struct.list_decoder* @zmalloc(i32 %55)
  store %struct.list_decoder* %56, %struct.list_decoder** %13, align 8
  %57 = load i32, i32* %11, align 4
  %58 = load %struct.list_decoder*, %struct.list_decoder** %13, align 8
  %59 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %58, i32 0, i32 0
  store i32 %57, i32* %59, align 4
  %60 = load i32, i32* %12, align 4
  %61 = load %struct.list_decoder*, %struct.list_decoder** %13, align 8
  %62 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %61, i32 0, i32 1
  store i32 %60, i32* %62, align 4
  %63 = load %struct.list_decoder*, %struct.list_decoder** %13, align 8
  %64 = load i32, i32* %6, align 4
  %65 = load i32, i32* %7, align 4
  %66 = load i8*, i8** %8, align 8
  %67 = load i32, i32* %9, align 4
  %68 = load i32, i32* %10, align 4
  %69 = call i32 @list_decoder_init(%struct.list_decoder* %63, i32 %64, i32 %65, i8* %66, i32 %67, i32 %68)
  %70 = load %struct.list_decoder*, %struct.list_decoder** %13, align 8
  ret %struct.list_decoder* %70
}

declare dso_local i32 @bsr(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @llrun_get_buckets_quantity(i32) #1

declare dso_local i32 @get_max_possible_gap(i32, i32) #1

declare dso_local %struct.list_decoder* @zmalloc(i32) #1

declare dso_local i32 @list_decoder_init(%struct.list_decoder*, i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
